VB/Lib/xcgui.bas

Declare Function XListView_ExpandGroup Lib "xcgui.dll" (ByVal hEle As Long, ByVal iGroup As Long, ByVal bExpand As Boolean) As Boolean
Declare Function XMenuBar_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Function XMenuBar_AddButton Lib "xcgui.dll" (ByVal hEle As Long, ByVal pText As String) As Long
Declare Sub XMenuBar_AddMenuItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long, ByVal id As Long, ByVal pText As String, ByVal parentId As Long, ByVal uFlags As Long)
Declare Sub XMenuBar_InsertMenuItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long, ByVal id As Long, ByVal pText As String, ByVal uFlags As Long, ByVal insertID As Long)
Declare Sub XMenuBar_SetButtonHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal height As Long)
Declare Function XMenu_Create Lib "xcgui.dll" () As Long
Declare Sub XMenu_AddItem Lib "xcgui.dll" (ByVal hMenu As Long, ByVal nID As Long, ByVal pText As String, ByVal parentId As Long, ByVal uFlags As Long)
Declare Sub XMenu_InsertItem Lib "xcgui.dll" (ByVal hMenu As Long, ByVal id As Long, ByVal pText As String, ByVal uFlags As Long, ByVal insertID As Long)
Declare Sub XMenu_SetAutoDestroy Lib "xcgui.dll" (ByVal hMenu As Long, ByVal bAuto As Boolean)
Declare Function XMenu_Popup Lib "xcgui.dll" (ByVal hMenu As Long, ByVal hParentWnd As Long, ByVal x As Long, ByVal y As Long, ByVal hParentEle As Long, ByVal uFlags As Long) As Boolean
Declare Sub XMenu_DestroyMenu Lib "xcgui.dll" (ByVal hMenu As Long)
Declare Sub XMenu_CloseMenu Lib "xcgui.dll" (ByVal hMenu As Long)
Declare Function XMenu_SetItemText Lib "xcgui.dll" (ByVal hMenu As Long, ByVal id As Long, ByVal pText As String) As Boolean
Declare Function XMenu_SetItemFlags Lib "xcgui.dll" (ByVal hMenu As Long, ByVal id As Long, ByVal uFlags As Long) As Boolean
Declare Sub XMenu_SetItemHeight Lib "xcgui.dll" (ByVal hMenu As Long, ByVal height As Long)
Declare Function XMenu_GetItemHeight Lib "xcgui.dll" (ByVal hMenu As Long) As Long
Declare Function XMenu_GetLeftWidth Lib "xcgui.dll" (ByVal hMenu As Long) As Long
Declare Function XMenu_GetLeftSpaceText Lib "xcgui.dll" (ByVal hMenu As Long) As Long
Declare Function XModalWnd_Create Lib "xcgui.dll" (ByVal nWidth As Long, ByVal nHeight As Long, ByVal pTitle As String, ByVal hWndParent As Long, ByVal XCStyle As Long) As Long
Declare Sub XModalWnd_EnableAutoClose Lib "xcgui.dll" (ByVal hWindow As Long, ByVal bEnable As Boolean)
Declare Function XModalWnd_DoModal Lib "xcgui.dll" (ByVal hWindow As Long) As Long
Declare Sub XModalWnd_EndModal Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nResult As Long)
Declare Function XPane_Create Lib "xcgui.dll" (ByVal pName As String, ByVal nWidth As Long, ByVal nHeight As Long, ByVal hFrameWnd As Long, ByVal id As Long) As Long
Declare Sub XPane_SetView Lib "xcgui.dll" (ByVal hEle As Long, ByVal hView As Long)
Declare Function XProgBar_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XProgBar_SetRange Lib "xcgui.dll" (ByVal hEle As Long, ByVal range As Long)
Declare Function XProgBar_GetRange Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XProgBar_SetSpaceTwo Lib "xcgui.dll" (ByVal hEle As Long, ByVal leftSize As Long, ByVal rightSize As Long)
Declare Sub XProgBar_SetPos Lib "xcgui.dll" (ByVal hEle As Long, ByVal pos As Long)
Declare Function XProgBar_GetPos Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XProgBar_SetHorizon Lib "xcgui.dll" (ByVal hEle As Long, ByVal bHorizon As Boolean)
Declare Sub XProgBar_SetImageLoad Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Function XPGrid_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Function XPGrid_AddItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal pName As String, ByVal ntype As Long, ByVal nParentID As Long) As Long
Declare Function XPGrid_AddItemString Lib "xcgui.dll" (ByVal hEle As Long, ByVal pName As String, ByVal pValue As String, ByVal nParentID As Long) As Long
Declare Sub XPGrid_DeleteAll Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XPGrid_GetItemHELE Lib "xcgui.dll" (ByVal hEle As Long, ByVal nItemID As Long) As Long
Declare Sub XPGrid_SetWidth Lib "xcgui.dll" (ByVal hEle As Long, ByVal nWidth As Long)
Declare Function XPGrid_SetItemValue Lib "xcgui.dll" (ByVal hEle As Long, ByVal nItemID As Long, ByVal pValue As String) As Boolean
Declare Function XPGrid_SetItemValueInt Lib "xcgui.dll" (ByVal hEle As Long, ByVal nItemID As Long, ByVal nValue As Long) As Boolean
Declare Function XPGrid_HitTest Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point, ByVal pbExpandButton As Boolean) As Long
Declare Function XPGrid_HitTestOffset Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point, ByVal pbExpandButton As Boolean) As Long
Declare Function XRichEditColor_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XRichEditColor_SetColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long)
Declare Function XRichEditColor_GetColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XRichEditSet_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Function XRichEditFile_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XRichEditFile_SetOpenFileType Lib "xcgui.dll" (ByVal hEle As Long, ByVal pType As String)
Declare Sub XRichEditFile_SetDefaultFile Lib "xcgui.dll" (ByVal hEle As Long, ByVal pFile As String)
Declare Sub XRichEditFile_SetRelativeDir Lib "xcgui.dll" (ByVal hEle As Long, ByVal pDir As String)
Declare Sub XRichEditFolder_SetDefaultDir Lib "xcgui.dll" (ByVal hEle As Long, ByVal pDir As String)
Declare Function XRichEdit_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XRichEdit_InsertString Lib "xcgui.dll" (ByVal hEle As Long, ByVal iRow As Long, ByVal iColumn As Long, ByVal pString As String)
Declare Sub XRichEdit_EnableReadOnly Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XRichEdit_EnableMultiLine Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XRichEdit_EnablePassword Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XRichEdit_EnableEvent_XE_RICHEDIT_CHANGE Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XRichEdit_SetText Lib "xcgui.dll" (ByVal hEle As Long, ByVal pString As String)
Declare Sub XRichEdit_SetTextInt Lib "xcgui.dll" (ByVal hEle As Long, ByVal nVaule As Long)
Declare Function XRichEdit_GetText Lib "xcgui.dll" (ByVal hEle As Long, ByVal pOut As String, ByVal nlen As Long) As Long
Declare Function XRichEdit_GetTextLength Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XRichEdit_SetRowHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal nHeight As Long)
Declare Function XRichEdit_GetCurrentRow Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XRichEdit_GetCurrentColumn Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XRichEdit_GetRowCount Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XRichEdit_GetRowLength Lib "xcgui.dll" (ByVal hEle As Long, ByVal iRow As Long) As Long
Declare Function XRichEdit_GetSelectText Lib "xcgui.dll" (ByVal hEle As Long, ByVal pOut As String, ByVal nlen As Long) As Long
Declare Sub XRichEdit_CancelSelect Lib "xcgui.dll" (ByVal hEle As Long)
Declare Sub XRichEdit_SetSelectBkColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XRichEdit_isEmpty Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XRichEdit_SelectAll Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XRichEdit_DeleteSelect Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Sub XRichEdit_DeleteAll Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XRichEdit_ClipboardCopy Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XRichEdit_ClipboardPaste Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSBar_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XSBar_SetRange Lib "xcgui.dll" (ByVal hEle As Long, ByVal range As Long)
Declare Function XSBar_GetRange Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XSBar_ShowButton Lib "xcgui.dll" (ByVal hEle As Long, ByVal bShow As Boolean)
Declare Sub XSBar_SetSliderLength Lib "xcgui.dll" (ByVal hEle As Long, ByVal length As Long)
Declare Sub XSBar_SetSliderMinLength Lib "xcgui.dll" (ByVal hEle As Long, ByVal minLength As Long)
Declare Function XSBar_SetHorizon Lib "xcgui.dll" (ByVal hEle As Long, ByVal bHorizon As Boolean) As Boolean
Declare Function XSBar_GetSliderMaxLength Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XSBar_ScrollUp Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSBar_ScrollDown Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSBar_ScrollTop Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSBar_ScrollBottom Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSBar_ScrollPos Lib "xcgui.dll" (ByVal hEle As Long, ByVal pos As Long) As Boolean
Declare Function XSBar_GetButtonUp Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XSBar_GetButtonDown Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XSBar_GetButtonSlider Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XSView_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Function XSView_SetTotalSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal cx As Long, ByVal cy As Long) As Boolean
Declare Sub XSView_GetTotalSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal pSize As size)
Declare Function XSView_SetLineSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal nHeight As Long, ByVal nWidth As Long) As Boolean
Declare Sub XSView_GetLineSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal pSize As size)
Declare Function XSView_GetViewPosH Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XSView_GetViewPosV Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XSView_GetViewWidth Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XSView_GetViewHeight Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XSView_GetViewRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Function XSView_GetScrollBarH Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XSView_GetScrollBarV Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XSView_SetPadding Lib "xcgui.dll" (ByVal hEle As Long, ByVal left As Long, ByVal top As Long, ByVal right As Long, ByVal bottom As Long)
Declare Sub XSView_GetPadding Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPadding As PaddingSize_)
Declare Function XSView_ScrollPosH Lib "xcgui.dll" (ByVal hEle As Long, ByVal pos As Long) As Boolean
Declare Function XSView_ScrollPosV Lib "xcgui.dll" (ByVal hEle As Long, ByVal pos As Long) As Boolean
Declare Function XSView_ScrollPosXH Lib "xcgui.dll" (ByVal hEle As Long, ByVal posX As Long) As Boolean
Declare Function XSView_ScrollPosYV Lib "xcgui.dll" (ByVal hEle As Long, ByVal posY As Long) As Boolean
Declare Sub XSView_ShowSBarH Lib "xcgui.dll" (ByVal hEle As Long, ByVal bShow As Boolean)
Declare Sub XSView_ShowSBarV Lib "xcgui.dll" (ByVal hEle As Long, ByVal bShow As Boolean)
Declare Sub XSView_EnableAutoShowScrollBar Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
